--- a/style.css
+++ b/style.css
@@ -117,14 +117,15 @@ body{
 }
 
 .pbox blockquote{
+  max-width: 90%;
   text-align: center;
   font-size: 15px;
   margin: 5px;
 }
 
-.pbox p{
-  max-height: 25%;
-  max-width: 75%;
+.pbox p {
+  max-height: 5%;
+  max-width: 90%;
   text-align: center;
   font-size: 12px;
 }
@@ -134,6 +135,7 @@ body{
   max-height: 50%;
   text-align: center;
   font-size:15px;
+  padding-bottom: 20px;
 }
 
 .pbox figure img{
